# jarvis-agent

./: .gitignore  README.md  config.example.toml  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  config.py  consolidation.py  conversation_store.py  drift.py  llm_client.py  main.py  memory_normalizer.py  memory_policy.py  memory_store.py  proactive.py  prompt_assembler.py  self_model.py  setup_checks.py  telegram_bot.py
app/plugins/: __init__.py  concise_context_plugin.py  host.py  interval_reminder_plugin.py  note_memory_plugin.py  pending_review_drift_plugin.py  ping_tool_plugin.py  types.py
app/tools/: __init__.py  base.py  builtin.py  executor.py  loop.py  registry.py
app/turns/: __init__.py  context.py  orchestrator.py
docs/spark/: 2026-06-06-personal-agent-phase1-design.md  (+13 more)
jarvis/: __init__.py  config.py  logging.py
jarvis/channels/: __init__.py  (+1 more)
tests/: __init__.py  test_agent.py  test_agent_integration.py  test_builtin_tools.py  test_commit_stage.py  test_config.py  test_consolidation.py  test_conversation_store.py  test_drift.py  test_interval_reminder_plugin.py  test_memory_store.py  test_memory_subsystem.py  test_message_bus.py  test_passive_pipeline_hooks.py  test_passive_pipeline_stages.py  test_pending_review_drift_plugin.py  test_plugins.py  test_proactive.py  test_prompt_assembler.py  test_runtime_app.py  test_runtime_bootstrap.py  test_self_model.py  test_session_store.py  test_setup_checks.py  test_telegram_bot.py  test_tool_executor.py  test_tool_loop.py  test_tool_registry.py  test_tool_runtime.py  test_turn_orchestrator.py
(+52 files in other folders)
