[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-agent"
version = "0.1.0"
description = "Phase 1 personal Telegram agent."
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
