[project]
name = "jarvis-agent"
version = "0.1.0"
description = "Telegram-first personal agent MVP."
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.0.0",
    "httpx>=0.28.0",
    "openai>=2.0.0",
    "pydantic>=2.8.0",
    "python-telegram-bot>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*", "jarvis", "jarvis.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
